<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_moon"
        android:name="sim.astronomy.go.ui.moon.MoonFragment"
        android:label="@string/title_moon"
        tools:layout="@layout/fragment_moon" />
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="sim.astronomy.go.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_sun"
        android:name="sim.astronomy.go.ui.sun.SunFragment"
        android:label="@string/title_sun"
        tools:layout="@layout/fragment_sun" />

    <fragment
        android:id="@+id/navigation_zodiac"
        android:name="sim.astronomy.go.ui.zodiac.ZodiacFragment"
        android:label="@string/title_zodiac"
        tools:layout="@layout/fragment_zodiac" />
</navigation>