<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15sp"
    tools:context=".EditCords.EditLocationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/City"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/editLocation_CityName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/editLocation_cityNameSpeakable"
                    android:inputType="text" />

                <requestFocus
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/Gmt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Spinner
                    android:id="@+id/editLocation_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/Sun_LATITUDE"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editLocation_latitudeDegrees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:gravity="end"
                        android:inputType="number|numberDecimal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView25"
                        android:hint="@string/editLocation_latitudeDegreesSpeakable"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/degree_post"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/editLocation_latitudeMinutes"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editLocation_latitudeMinutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:gravity="end"
                        android:inputType="number|numberDecimal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView27"
                        android:hint="@string/editLocation_latitudeMinutesSpeakable"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minute_post"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/editLocation_latitudeSeconds"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editLocation_latitudeSeconds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:gravity="end"
                        android:inputType="number|numberDecimal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView28"
                        android:hint="@string/editLocation_latitudeSecondsSpeakable"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/second_post"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_span="2">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <RadioButton
                            android:id="@+id/editLocation_northCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/North" />

                        <RadioButton
                            android:id="@+id/editLocation_southCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/South" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView124"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/Sun_LONGITUDE"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editLocation_longitudeDegrees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:gravity="end"
                        android:inputType="number|numberDecimal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView125"
                        android:hint="@string/editLocation_longitudeDegreesSpeakable"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView125"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/degree_post"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/editLocation_longitudeMinutes"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editLocation_longitudeMinutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:gravity="end"
                        android:inputType="number|numberDecimal"
                        android:hint="@string/editLocation_longitudeMinutesSpeakable"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView127"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView127"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minute_post"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/editLocation_longitudeSeconds"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editLocation_longitudeSeconds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:gravity="end"
                        android:inputType="number|numberDecimal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView128"
                        android:hint="@string/editLocation_longitudeSecondsSpeakable"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView128"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/second_post"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_span="2">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <RadioButton
                            android:id="@+id/editLocation_eastCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/East" />

                        <RadioButton
                            android:id="@+id/editLocation_westCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/West" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_span="2">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/WinSum"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView">

                        <RadioButton
                            android:id="@+id/editLocation_DstOff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/dst_off" />

                        <RadioButton
                            android:id="@+id/editLocation_DstEu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dst_eu" />

                        <RadioButton
                            android:id="@+id/editLocation_DstUsCanada"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dst_us_canada" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </TableRow>

        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/editLocation_buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/horo_theme_week_background"
            android:contentDescription="@string/edit_back"
            android:src="@drawable/close_button" />

        <ImageButton
            android:id="@+id/editLocation_buttonGps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/horo_theme_week_background"
            android:contentDescription="@string/edit_get_location"
            android:src="@drawable/satellite" />

        <ImageButton
            android:id="@+id/editLocation_buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/horo_theme_week_background"
            android:contentDescription="@string/edit_get_location"
            android:src="@drawable/save_icon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>